--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <restAssured.version>5.3.0</restAssured.version>
+        <restAssuredJsonSchema.version>4.3.3</restAssuredJsonSchema.version>
         <testng.version>7.7.0</testng.version>
     </properties>
 
@@ -22,6 +23,13 @@
             <groupId>io.rest-assured</groupId>
             <artifactId>rest-assured</artifactId>
             <version>${restAssured.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>json-schema-validator</artifactId>
+            <version>${restAssuredJsonSchema.version}</version>
             <scope>test</scope>
         </dependency>
 
